--- a/src/consts/warpRoutes.yaml
+++ b/src/consts/warpRoutes.yaml
@@ -2,5 +2,23 @@
 # These configs will be merged with the warp routes in the configured registry
 # The input here is typically the output of the Hyperlane CLI warp deploy command
 ---
-tokens: []
-options: {}
+tokens:
+  - chainName: sepolia
+    standard: EvmHypCollateral
+    decimals: 18
+    symbol: tHYP
+    name: Hyperlane-Testnet
+    addressOrDenom: "0xc1033399132Db80B95F284d654E55eb8c08AB7F4"
+    collateralAddressOrDenom: "0xe957d6c03C06159303343E85476B32934E5Ffc19"
+    logoURI: "https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=040"
+    connections:
+      - token: ethereum|basesepolia|0xc1033399132Db80B95F284d654E55eb8c08AB7F4
+  - chainName: basesepolia
+    standard: EvmHypSynthetic
+    decimals: 18
+    symbol: tHYP
+    name: Hyperlane-Testnet
+    addressOrDenom: "0xc1033399132Db80B95F284d654E55eb8c08AB7F4"
+    logoURI: "https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=040"
+    connections:
+      - token: ethereum|sepolia|0xc1033399132Db80B95F284d654E55eb8c08AB7F4
